# Tesla-Homedash

./: .gitignore  README.md  config.json
backend/src/influxdb_service/: influxdb_handler.py
backend/src/media_player/: base_media_player.py  media_player.py
backend/src/radio_service/: radio_player.py
backend/src/spotify_service/: spotify_service.py
backend/src/tesla_service/: telemetry.py
backend/src/ui/plot/: dataplot.py
backend/src/utils/: config_parser.py
frontend/: CMakeLists.txt  resources.qrc
frontend/resources/: styles.qss
frontend/resources/styles/: climatecontroller.qss  currentweathercard.qss  mainweather.qss  singletesladataentry.qss  spotifyplayer.qss  tesladataentrylist.qss  weathercard.qss
frontend/src/: main.cpp  mainwindow.cpp  mainwindow.hh
frontend/src/mediaplayer/datahandler/: mediaplayerdatahandler.cpp  mediaplayerdatahandler.hh
frontend/src/mediaplayer/widgets/: mediaplayercard.cpp  mediaplayercard.hh
frontend/src/server_client/: serverclient.cpp  serverclient.hh
frontend/src/tesla/: vehicle.cpp  vehicle.hh
frontend/src/tesla/datahandler/: tesladatahandler.cpp  tesladatahandler.hh
frontend/src/tesla/widgets/: singletesladataentry.cpp  singletesladataentry.hh  tesladatawidget.cpp  tesladatawidget.hh
frontend/src/tesla/widgets/climate/: climatecontrollercard.cpp  climatecontrollercard.hh  temperaturecard.cpp  temperaturecard.hh  teslaclimatestarter.cpp  teslaclimatestarter.hh  teslaseatwidget.cpp  teslaseatwidget.hh  teslasteeringwidget.cpp  teslasteeringwidget.hh
frontend/src/tesla/widgets/dataentrylist/: tesladataentrylist.cpp  tesladataentrylist.hh
frontend/src/tesla/widgets/map/: map.qml  teslamap.cpp  teslamap.hh
frontend/src/weather/datahandler/: weatherdatahandler.cpp  weatherdatahandler.hh
frontend/src/weather/widgets/: currentweathercard.cpp  currentweathercard.hh  mainweather.cpp  mainweather.hh  weatherforecastcard.cpp  weatherforecastcard.hh
src/tesla_service/: tcp_server.py  vehicle.py  vehicle_data_property.py
src/weather_service/: weather_service.py
